fix for firefox: the textInput was overflowing when there was too much text on one line for the coloured text. Now the words that are too long are cut in an arbitrary place using css

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -17,6 +17,7 @@ body {
 	min-height: 100px;
 	display: block;
 	background-color: white;
+	word-wrap: break-word;
 }
 
 
